# ApplyAI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .env.example  app.py
backend/agents/: company_research.py  email_draft.py  email_hunter.py
backend/config/: settings.py
backend/modules/: applications_module.py  cv_module.py  email_module.py  jobs_module.py  outreach_module.py  pipeline_module.py
backend/schema/: agent_schema.py  cv_schema.py  email_schema.py  job_schema.py  pipeline_schema.py  pipeline_state_schema.py
backend/services/: apify_service.py  celery_service.py  groq_service.py  hunter_service.py  jsearch_service.py  openai_service.py  redis_service.py  supabase_service.py  tavily_service.py
backend/src/: cv_matching.py  cv_processor.py  graph.py  job_discovery.py  jwt_auth.py  sse_manager.py  status_updater.py
backend/src/pipeline/: state.py
backend/utils/: custom_exceptions.py  dedup.py  domain_utils.py  logger.py
backend/utils/prompt_hub/: email_draft_prompt.py
