[project]
name = "applyai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "pydantic-settings>=2.14.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=8.0.0",
    "supabase>=2.30.1",
    "tavily>=1.1.0",
    "uvicorn>=0.48.0",
]
